# MathModeling

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
graphics/: Color.h  Function.cpp  Function.h
src/: Color.h  GraphWindow.cpp  GraphWindow.h  InputSystem.cpp  InputSystem.h  Window.cpp  Window.h  main.cpp
src/labs/: Lab1.cpp  Lab1.h  Lab2.cpp  Lab2.h  Lab3.cpp  Lab3.h  Lab4.cpp  Lab4.h
src/math/: Block.h  DifFunction.cpp  DifFunction.h  Function.cpp  Function.h  Operations.cpp  Operations.h  Sequence.cpp  Sequence.h  Utilities.cpp  Utilities.h
test/: GraphWindow.cpp  GraphWindow.h
